<resources>
    <string name="app_name">FarmFresh</string>
    <string-array name="cityList">
        <item>Select a city</item>
        <item>Calgary, Alberta</item>
        <item>Charlottetown, P.E.I.</item>
        <item>Edmonton, Alberta</item>
        <item>Fredericton, New Brunswick</item>
        <item>Halifax, Nova Scotia</item>
        <item>Iqaluit, Nunavut</item>
        <item>Kelowna, B.C.</item>
        <item>Montreal, Quebec</item>
        <item>Ottawa, Ontario</item>
        <item>Quebec City, Quebec</item>
        <item>Regina, Saskatchewan</item>
        <item>Saskatoon, Saskatchewan</item>
        <item>St. John\'s, Newfoundland and Labrador</item>
        <item>Toronto, Ontario</item>
        <item>Vancouver, B.C.</item>
        <item>Victoria, B.C.</item>
        <item>Whitehorse, Yukon</item>
        <item>Winnipeg, Manitoba</item>
        <item>Yellowknife, Northwest Territories</item>
    </string-array>
    <string-array name="category">
        <item>Fruit</item>
        <item>Veggies</item>
        <item>Protein</item>
        <item>Dairy</item>
        <item>Sweets</item>
        <item>Grains</item>
        <item>Plants</item>
        <item>Jewelry</item>
        <item>Others</item>
    </string-array>
    <string name="title_activity_home_page">HomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Farm Fresh</string>
    <!--    <string name="nav_header_subtitle">android.studio@android.com</string>-->
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_search">Search</string>
    <string name="menu_nearMe">NearMe</string>
    <string name="menu_help">Help</string>

    <string name="home_second">Home Second</string>
    <string name="item_name">Item Name:</string>
    <string name="item_price">Item Price:</string>
    <string name="seller">Seller:</string>
    <string name="card_item_image">card item Image</string>
    <string name="category">Category</string>
</resources>
