<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <!--TODO: Change icon on all menu items -->
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home"/>
            <!--android:icon="@drawable/ic_menu_camera"-->
        <item
            android:id="@+id/nav_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_search"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_nearMe"
            android:title="@string/menu_nearMe" />
        <item
            android:id="@+id/nav_help"
            android:title="@string/menu_help" />
    </group>
</menu>