<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.farmfresh.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.farmfresh.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile">
    </fragment>

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.farmfresh.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search">
    </fragment>

    <fragment
        android:id="@+id/nav_nearMe"
        android:name="com.example.farmfresh.ui.near_me.NearMeFragment"
        android:label="@string/menu_nearMe"
        tools:layout="@layout/fragment_nearme">
    </fragment>

    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.farmfresh.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help">
    </fragment>

</navigation>