<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    app:cardBackgroundColor="#6cab6a"
    app:cardUseCompatPadding="true"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/cartItemImage"
                android:layout_gravity="left"
                android:layout_marginBottom="30dp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/card_item_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginLeft="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp">
                    <TextView
                        android:textColor="#3A3A3A"
                        android:textSize="7pt"
                        android:fontFamily="@font/acaslonpro_bold"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/item_name"/>
                    <TextView
                        android:textColor="#3A3A3A"
                        android:textSize="7pt"
                        android:fontFamily="@font/acaslonpro_bold"
                        android:id="@+id/cartItemName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginLeft="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp">
                    <TextView
                        android:textColor="#3A3A3A"
                        android:textSize="7pt"
                        android:fontFamily="@font/acaslonpro_bold"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/item_price"/>
                    <TextView
                        android:textColor="#3A3A3A"
                        android:textSize="7pt"
                        android:fontFamily="@font/acaslonpro_bold"
                        android:id="@+id/cartItemPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginLeft="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp">
                    <TextView
                        android:textColor="#3A3A3A"
                        android:textSize="7pt"
                        android:fontFamily="@font/acaslonpro_bold"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/seller"/>
                    <TextView
                        android:textColor="#3A3A3A"
                        android:textSize="7pt"
                        android:fontFamily="@font/acaslonpro_bold"
                        android:id="@+id/cartItemSeller"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
